# opensirka

./: README.md
adapter_motionshadow/: CMakeLists.txt  main.cpp  shadow  shadowClient.cpp  shadowFile.cpp  shadowFile.hpp  shadowFormat.cpp
calibrator/: CMakeLists.txt  motionshadow_jsm_struct.txt  sirka_m2_jsm_struct.txt
calibrator/src/: Accumulate.cpp  Accumulate.h  TimedSensorState.cpp  TimedSensorState.h  body_length_equality_constraint.h  displacement_lq.cpp  displacement_lq.h  dynamic_accumulate_measurement.h  hinge_measurement.h  joint_priors.h  joint_sensor_map.cpp  joint_sensor_map.h  joint_sensor_map_extensions.cpp  joint_sensor_map_extensions.h  main.cpp  packed_triangular_matrix.h  sphere_parameterization.h
calibrator/tests/: CMakeLists.txt  test_packed_matrix.cpp  test_sphere_parameterization.cpp
example_data/: symmetries.txt
example_data/output/calibration/: joint_sensor_map.txt
libimureading/: CMakeLists.txt
libimureading/src/: Accumulate.h  Calibration.cpp  Calibration.h  IMUAccumulate.cpp  IMUAccumulate.h  IMUReading.cpp  IMUReading.h  JointSensorMap.h  SensorLocation.h  Variance.cpp  Variance.h
libimureading/tests/: CMakeLists.txt  test_accumulate.cpp  test_jointsensormap.cpp  test_loadaccumulate.cpp  test_loadresolutions.cpp  test_noisedensities.cpp
libimureading/tests/data/: jsm.txt
postureestimator/: CMakeLists.txt  githash.cpp.in  githash.h  m2-accu-replay.cpp
postureestimator/MathHelper/: CMakeLists.txt  crossx.cpp  crossx.h  expm.cpp  expm.h  jacobian.h  sphere.cpp  sphere.h
postureestimator/Options/: CMakeLists.txt  options.cpp  options.h
postureestimator/OrientationFromMotion/: CMakeLists.txt  joint_sensor_map.cpp  joint_sensor_map.h  ofm_log.cpp  ofm_log.h  ofm_types.h  orientation_from_motion.cpp  orientation_from_motion.h  single_sensor_state.cpp  single_sensor_state.h
postureestimator/Tests/: CMakeLists.txt  test_math_helper.cpp  test_orientation_from_motion.cpp  test_single_sensor_state.cpp
postureestimator/Types/: data_types.h
postureestimator/jsmviz/: CMakeLists.txt  jsmviz.cpp  jsmviz.h
